--- a/public/index.html
+++ b/public/index.html
@@ -493,7 +493,7 @@
 						<div class="col-md-4 col-lg-2 col-xl-3 d-none d-sm-block">
 							<div class="footer__logo"><img loading="lazy" src="img/svg/logo.svg" alt=""/>
 							</div>
-							<div class="f-soc-row row">
+							<div class="f-soc-row row justify-content-center justify-content-md-start">
 								<div class="col-auto">
 									<a class="f-soc-row__soc-item" href="#" target="_blank" style="background-color: #4A76A8;"><img loading="lazy" src="img/svg/soc-vk.svg" alt=""/>
 									</a>
@@ -638,30 +638,45 @@
 				</div>
 			</div>
 		</div>
+		<div class="scroll-top scroll-top--js"><img loading="lazy" src="img/svg/chevron-top.svg">
+		</div>
 		<!--  start modals-->
 		<div class="modal-win" id="modal-call" style="display: none">
+			<div class="close-modal close-modal--js"><img loading="lazy" src="img/svg/cross-black.svg" alt=""/>
+			</div>
 			<div class="form-wrap">
 				<form>
 					<div class="text-center">
 						<div class="form-wrap__title form-data h3 ttu">Обратный звонок
 						</div>
 						<p class="after-headline">Заполните заявку и&nbsp;мы&nbsp;с&nbsp;Вами свяжемся в&nbsp;течение 15&nbsp;минут</p>
+						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
+						</div>
+						<!-- +e.input-wrap-->
+						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер" required="required"/>
+						</div>
+						<!-- +e.input-wrap-->
+						<button class="form-wrap__btn" type="submit">Обратный звонок
+						</button>
 					</div>
-					<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/> 
-					</div>
-					<!-- +e.input-wrap-->
-					<button class="form-wrap__btn btn" type="submit"> 
-					</button>
-					<div class="p-5"></div>
-					<div class="p-5"></div>
-					<div class="p-5"></div>
-					<div class="p-5"></div>
-					<div class="p-5"></div>
 					<div class="form-wrap__policy">
 						<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><small class="custom-input__text text-secondary">Согласен на обработку и хранение моих персональных данных в соответствии с условиями</small>
 						</label>
 					</div>
 				</form>
+			</div>
+		</div>
+		<div class="modal-car modal-win" id="modal-car" style="display: none">
+			<div class="close-modal close-modal--js"><img loading="lazy" src="img/svg/cross-black.svg" alt=""/>
+			</div>
+			<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-1.jpg" alt=""/>
+			</div>
+			<div class="modal-car__name">Газель
+			</div>
+			<div class="modal-car__descr">
+				<p>Компания «АвтоРекорд» является сертифицированным поставщиком надстроек на грузовые автомобили марки «ГАЗ» в Нижнем Новгороде и одним из основных направлений нашей деятельности является именно удлинение рам.</p>
+			</div>
+			<div class="modal-car__region"><span class="me-1">Регион:</span><b>Москва</b>
 			</div>
 		</div>
 		<!-- #modal-call-->
