--- a/public/08-services-big.html
+++ b/public/08-services-big.html
@@ -189,13 +189,13 @@
 							</div>
 							<div class="col-auto text-end ms-auto ms-lg-0">
 								<div class="top-nav__tell-dd">
-									<div class="top-nav__dd-btn">
+									<div class="top-nav__dd-btn tell-dd-btn-js">
 										<div class="top-nav__icon"><img loading="lazy" src="img/svg/tell.svg" alt=""/>
 										</div>
-										<div class="top-nav__number d-none d-lg-block">8 800 222 97 92
-										</div>
+										<a class="top-nav__number d-none d-lg-block" href="tel:+88002229792">8 800 222 97 92
+										</a>
 									</div>
-									<div class="tell-dd">
+									<div class="tell-dd tell-dd--js">
 										<div class="tell-dd__inner">
 											<div class="tell-dd__item">
 												<a class="tell-dd__tell" href="89308088580">8 (930) 808-85-80
