--- a/public/08-services-big.html
+++ b/public/08-services-big.html
@@ -198,19 +198,19 @@
 									<div class="tell-dd tell-dd--js">
 										<div class="tell-dd__inner">
 											<div class="tell-dd__item">
-												<a class="tell-dd__tell" href="89308088580">8 (930) 808-85-80
+												<a class="tell-dd__tell" href="tel:89308088580">8 (930) 808-85-80
 												</a>
 												<div class="tell-dd__gray">бесплатно по России
 												</div>
 											</div>
 											<div class="tell-dd__item">
-												<a class="tell-dd__tell" href="88002229792">8 (800) 222-97-92
+												<a class="tell-dd__tell" href="tel:88002229792">8 (800) 222-97-92
 												</a>
 												<div class="tell-dd__gray">городской
 												</div>
 											</div>
 											<div class="tell-dd__item">
-												<a class="tell-dd__tell" href="https://api.whatsapp.com/send/?phone=88312160797">8 (831) 216-07-97
+												<a class="tell-dd__tell" href="tel:https://api.whatsapp.com/send/?phone=88312160797">8 (831) 216-07-97
 												</a>
 												<div class="tell-dd__gray">whats up - для звонков из зарубежа
 												</div>
