made blue strip fix

--- a/public/03-feedbacks.html
+++ b/public/03-feedbacks.html
@@ -597,26 +597,7 @@
 				</div>
 			</footer>
 			<div class="fixed-box fixed-box--js">
-				<div class="blue-f">
-					<div class="container">
-						<div class="row align-items-center">
-							<div class="col-auto d-none d-md-block">
-								<div class="blue-f__tell-icon"><img loaading="lazy" src="img/svg/tell.svg" alt=""/>
-								</div>
-							</div>
-							<div class="col">
-								<div class="blue-f__txt"><span>
-										Перезвоним с готовым решением в
-										</span><span class="text-primary">удобное для вас время</span>
-								</div>
-							</div>
-							<div class="col-auto">
-								<a class="blue-f__btn link-modal-js" href="#modal-call">Обратный звонок
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
+				<!--+blueFixed()-->
 				<div class="gray-f gray-f--js">
 					<div class="container">
 						<div class="gray-f__row row align-items-center">
