--- a/public/08-services-big.html
+++ b/public/08-services-big.html
@@ -116,7 +116,7 @@
 				</div>
 			</div>
 			<!-- start header-->
-			<header class="header" id="header">
+			<header class="header header--js" id="header">
 				<!-- start topLine-->
 				<div class="topLine d-none d-md-block" id="topLine">
 					<div class="container">
