--- a/public/01-catalog.html
+++ b/public/01-catalog.html
@@ -82,7 +82,7 @@
 							</div>
 							<div class="f-address__mnu-rights">
 								© ООО «Авторекорд»
-								<span class="set-curr-year-js">2020</span><br/>ИНН 5256171974, ОГРН 1185275017124
+								<span class="set-curr-year-js">2020</span>
 							</div>
 						</div>
 						<div class="soc">
@@ -447,12 +447,8 @@
 								</p>
 							</div>
 							<div class="f-address__mob-row row d-md-none">
-								<div class="col-6">
-									<a class="big-link link-modal-js" href="#modal-call">Проложить<br/>маршрут
-									</a>
-								</div>
-								<div class="col-6">
-									<a class="big-link link-modal-js" href="#modal-call">Обратный<br/>звонок
+								<div class="col-12">
+									<a class="big-link link-modal-js" href="#modal-call">Проложить маршрут
 									</a>
 								</div>
 							</div>
@@ -546,7 +542,24 @@
 		<div class="modal-car modal-win" id="modal-car" style="display: none">
 			<div class="close-modal close-modal--js"><img loading="lazy" src="img/svg/cross-black.svg" alt=""/>
 			</div>
-			<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-1.jpg" alt=""/>
+			<div class="modal-car__slider-wrap">
+				<div class="swiper-container modal-car-slider-js">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-1.jpg" alt=""/>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-2.jpg" alt=""/>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-3.jpg" alt=""/>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
 			</div>
 			<div class="modal-car__name">Газель
 			</div>
