--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 							</div>
 							<div class="f-address__mnu-rights">
 								© ООО «Авторекорд»
-								<span class="set-curr-year-js">2020</span><br/>ИНН 5256171974, ОГРН 1185275017124
+								<span class="set-curr-year-js">2020</span>
 							</div>
 						</div>
 						<div class="soc">
@@ -359,77 +359,57 @@
 							<span>информация</span>
 						</h2>
 					</div>
-					<div class="tabs row sAddInfo-dd-group-js">
-						<div class="col-md-6 col-lg-5 d-none d-md-block">
-							<div class="tabs__btn">Справка о компании
-							</div>
-							<div class="tabs__btn active">Выполненные проекты
-							</div>
-							<div class="tabs__btn">Информация для заказчиков
-							</div>
-							<div class="tabs__btn">Отзывы клиентов
+					<div class="row gy-20">
+						<div class="col-sm-6 col-lg-3">
+							<div class="add-card">
+								<a class="add-card__img" href="#"><img loading="lazy" src="img/@2x/sWorksItem-1.jpg" alt=""/>
+								</a>
+								<a class="add-card__title h6" href="#">Справка о компании
+								</a>
+								<div class="add-card__content">
+									<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески.1</p>
+								</div>
+								<a class="add-card__btn" href="#">Подробнее
+								</a>
 							</div>
 						</div>
-						<div class="tabs__wrap col-md-6 col-lg-7">
-							<div class="tabs__dd-item">
-								<div class="tabs__mob-btn dd-head-js d-md-none">Справка о компании
+						<div class="col-sm-6 col-lg-3">
+							<div class="add-card">
+								<a class="add-card__img" href="#"><img loading="lazy" src="img/@2x/sWorksItem-2.jpg" alt=""/>
+								</a>
+								<a class="add-card__title h6" href="#">Выполненные проекты
+								</a>
+								<div class="add-card__content">
+									<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески.2</p>
 								</div>
-								<div class="dd-content-js">
-									<div class="tabs__content">
-										<div class="tabs__txt">
-											<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески.1</p>
-										</div>
-										<div class="text-md-end">
-											<a class="tabs__more-btn" href="#">Подробнее
-											</a>
-										</div>
-									</div>
-								</div>
+								<a class="add-card__btn" href="#">Подробнее
+								</a>
 							</div>
-							<div class="tabs__dd-item active">
-								<div class="tabs__mob-btn dd-head-js d-md-none">Выполненные проекты
+						</div>
+						<div class="col-sm-6 col-lg-3">
+							<div class="add-card">
+								<a class="add-card__img" href="#"><img loading="lazy" src="img/@2x/sWorksItem-3.jpg" alt=""/>
+								</a>
+								<a class="add-card__title h6" href="#">Информация для заказчиков	
+								</a>
+								<div class="add-card__content">
+									<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески.3</p>
 								</div>
-								<div class="dd-content-js active">
-									<div class="tabs__content active">
-										<div class="tabs__txt">
-											<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески.</p>
-										</div>
-										<div class="text-md-end">
-											<a class="tabs__more-btn" href="#">Подробнее
-											</a>
-										</div>
-									</div>
-								</div>
+								<a class="add-card__btn" href="#">Подробнее
+								</a>
 							</div>
-							<div class="tabs__dd-item">
-								<div class="tabs__mob-btn dd-head-js d-md-none">Информация для заказчиков
+						</div>
+						<div class="col-sm-6 col-lg-3">
+							<div class="add-card">
+								<a class="add-card__img" href="#"><img loading="lazy" src="img/@2x/sWorksItem-4.jpg" alt=""/>
+								</a>
+								<a class="add-card__title h6" href="#">Отзывы клиентов
+								</a>
+								<div class="add-card__content">
+									<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески.4</p>
 								</div>
-								<div class="dd-content-js">
-									<div class="tabs__content">
-										<div class="tabs__txt">
-											<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески.3</p>
-										</div>
-										<div class="text-md-end">
-											<a class="tabs__more-btn" href="#">Подробнее
-											</a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="tabs__dd-item">
-								<div class="tabs__mob-btn dd-head-js d-md-none">Отзывы клиентов
-								</div>
-								<div class="dd-content-js">
-									<div class="tabs__content">
-										<div class="tabs__txt">
-											<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески.4</p>
-										</div>
-										<div class="text-md-end">
-											<a class="tabs__more-btn" href="#">Подробнее
-											</a>
-										</div>
-									</div>
-								</div>
+								<a class="add-card__btn" href="#">Подробнее
+								</a>
 							</div>
 						</div>
 					</div>
@@ -558,12 +538,8 @@
 								</p>
 							</div>
 							<div class="f-address__mob-row row d-md-none">
-								<div class="col-6">
-									<a class="big-link link-modal-js" href="#modal-call">Проложить<br/>маршрут
-									</a>
-								</div>
-								<div class="col-6">
-									<a class="big-link link-modal-js" href="#modal-call">Обратный<br/>звонок
+								<div class="col-12">
+									<a class="big-link link-modal-js" href="#modal-call">Проложить маршрут
 									</a>
 								</div>
 							</div>
@@ -656,7 +632,24 @@
 		<div class="modal-car modal-win" id="modal-car" style="display: none">
 			<div class="close-modal close-modal--js"><img loading="lazy" src="img/svg/cross-black.svg" alt=""/>
 			</div>
-			<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-1.jpg" alt=""/>
+			<div class="modal-car__slider-wrap">
+				<div class="swiper-container modal-car-slider-js">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-1.jpg" alt=""/>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-2.jpg" alt=""/>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="modal-car__img"><img loading="lazy" src="img/@2x/headerBlock-card-3.jpg" alt=""/>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-pagination"></div>
+				</div>
 			</div>
 			<div class="modal-car__name">Газель
 			</div>
