--- a/public/08-services-big.html
+++ b/public/08-services-big.html
@@ -732,10 +732,6 @@
 							</div>
 						</div>
 						<div class="f-address col-md-4 col-lg-3 col-xl-3 text-center text-md-start">
-							<div class="f-address__mob-rights d-md-none">
-								© ООО «Авторекорд»
-								<span class="set-curr-year-js">2021</span>, ИНН 5256171974,<br/>ОГРН 1185275017124
-							</div>
 							<div class="f-address__item">
 								<div class="f-address__i-title">Адрес:
 								</div>
@@ -746,11 +742,11 @@
 								</div>
 								<p>будни  8:00 - 17:00</p>
 							</div>
-							<div class="f-address__item f-address__item--nums d-none d-md-block">
+							<div class="f-address__item f-address__item--nums">
 								<p>ОГРН 1185275017124</p>
 								<p>ИНН 5256171974</p>
 							</div>
-							<div class="f-address__item d-none d-md-block">
+							<div class="f-address__item">
 								<p>
 									© ООО «Авторекор»
 									<span class="set-curr-year-js">2021</span>
