--- a/public/01-catalog.html
+++ b/public/01-catalog.html
@@ -290,13 +290,15 @@
 									</ul>
 								</li>
 							</ul>
-							<div class="page-head__actual-title">Актуально по теме
+							<div class="page-head__actual-title">Актуально по теме 
 							</div>
-							<ul class="page-head__a-items">
-								<li><a href="#">Бортовые платформы</a></li>
-								<li><a href="#">Бортовые платформы</a></li>
-								<li><a href="#">Бортовые платформы</a></li>
-							</ul>
+							<div class="page-head__a-items">
+								<ul>
+									<li><a href="#">Бортовые платформы</a></li>
+									<li><a href="#">Бортовые платформы</a></li>
+									<li><a href="#">Бортовые платформы</a></li>
+								</ul>
+							</div>
 						</div>
 						<div class="col">
 							<nav>
@@ -422,10 +424,6 @@
 							</div>
 						</div>
 						<div class="f-address col-md-4 col-lg-3 col-xl-3 text-center text-md-start">
-							<div class="f-address__mob-rights d-md-none">
-								© ООО «Авторекорд»
-								<span class="set-curr-year-js">2021</span>, ИНН 5256171974,<br/>ОГРН 1185275017124
-							</div>
 							<div class="f-address__item">
 								<div class="f-address__i-title">Адрес:
 								</div>
@@ -436,11 +434,11 @@
 								</div>
 								<p>будни  8:00 - 17:00</p>
 							</div>
-							<div class="f-address__item f-address__item--nums d-none d-md-block">
+							<div class="f-address__item f-address__item--nums">
 								<p>ОГРН 1185275017124</p>
 								<p>ИНН 5256171974</p>
 							</div>
-							<div class="f-address__item d-none d-md-block">
+							<div class="f-address__item">
 								<p>
 									© ООО «Авторекор»
 									<span class="set-curr-year-js">2021</span>
