--- a/public/03-feedbacks.html
+++ b/public/03-feedbacks.html
@@ -86,27 +86,27 @@
 							</div>
 						</div>
 						<div class="soc">
-							<a class="soc__item soc-vk" href="#" target="_blank">
+							<a class="soc__item soc-vk" href="#" target="_blank" rel="nofollow">
 								<svg class="icon icon-soc-vk ">
 									<use xlink:href="img/svg/sprite.svg#soc-vk"></use>
 								</svg>
 							</a>
-							<a class="soc__item soc-inst" href="#" target="_blank">
+							<a class="soc__item soc-inst" href="#" target="_blank" rel="nofollow">
 								<svg class="icon icon-soc-inst ">
 									<use xlink:href="img/svg/sprite.svg#soc-inst"></use>
 								</svg>
 							</a>
-							<a class="soc__item soc-fb" href="#" target="_blank">
+							<a class="soc__item soc-fb" href="#" target="_blank" rel="nofollow">
 								<svg class="icon icon-soc-fb ">
 									<use xlink:href="img/svg/sprite.svg#soc-fb"></use>
 								</svg>
 							</a>
-							<a class="soc__item soc-tw" href="#" target="_blank">
+							<a class="soc__item soc-tw" href="#" target="_blank" rel="nofollow">
 								<svg class="icon icon-soc-tw ">
 									<use xlink:href="img/svg/sprite.svg#soc-tw"></use>
 								</svg>
 							</a>
-							<a class="soc__item soc-yt" href="#" target="_blank">
+							<a class="soc__item soc-yt" href="#" target="_blank" rel="nofollow">
 								<svg class="icon icon-soc-yt ">
 									<use xlink:href="img/svg/sprite.svg#soc-yt"></use>
 								</svg>
@@ -141,27 +141,27 @@
 							</div>
 							<div class="col">
 								<div class="soc">
-									<a class="soc__item soc-vk" href="#" target="_blank">
+									<a class="soc__item soc-vk" href="#" target="_blank" rel="nofollow">
 										<svg class="icon icon-soc-vk ">
 											<use xlink:href="img/svg/sprite.svg#soc-vk"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc-inst" href="#" target="_blank">
+									<a class="soc__item soc-inst" href="#" target="_blank" rel="nofollow">
 										<svg class="icon icon-soc-inst ">
 											<use xlink:href="img/svg/sprite.svg#soc-inst"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc-fb" href="#" target="_blank">
+									<a class="soc__item soc-fb" href="#" target="_blank" rel="nofollow">
 										<svg class="icon icon-soc-fb ">
 											<use xlink:href="img/svg/sprite.svg#soc-fb"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc-tw" href="#" target="_blank">
+									<a class="soc__item soc-tw" href="#" target="_blank" rel="nofollow">
 										<svg class="icon icon-soc-tw ">
 											<use xlink:href="img/svg/sprite.svg#soc-tw"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc-yt" href="#" target="_blank">
+									<a class="soc__item soc-yt" href="#" target="_blank" rel="nofollow">
 										<svg class="icon icon-soc-yt ">
 											<use xlink:href="img/svg/sprite.svg#soc-yt"></use>
 										</svg>
@@ -482,31 +482,31 @@
 			<footer class="footer">
 				<div class="container">
 					<div class="row gy-20">
-						<div class="col-md-4 col-lg-2 col-xl-3 d-none d-sm-block">
+						<div class="col-md-4 col-lg-2 col-xl-3 d-none d-md-block">
 							<div class="footer__logo"><img loading="lazy" src="img/svg/logo.svg" alt=""/>
 							</div>
 							<div class="soc">
-								<a class="soc__item soc-vk" href="#" target="_blank">
+								<a class="soc__item soc-vk" href="#" target="_blank" rel="nofollow">
 									<svg class="icon icon-soc-vk ">
 										<use xlink:href="img/svg/sprite.svg#soc-vk"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc-inst" href="#" target="_blank">
+								<a class="soc__item soc-inst" href="#" target="_blank" rel="nofollow">
 									<svg class="icon icon-soc-inst ">
 										<use xlink:href="img/svg/sprite.svg#soc-inst"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc-fb" href="#" target="_blank">
+								<a class="soc__item soc-fb" href="#" target="_blank" rel="nofollow">
 									<svg class="icon icon-soc-fb ">
 										<use xlink:href="img/svg/sprite.svg#soc-fb"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc-tw" href="#" target="_blank">
+								<a class="soc__item soc-tw" href="#" target="_blank" rel="nofollow">
 									<svg class="icon icon-soc-tw ">
 										<use xlink:href="img/svg/sprite.svg#soc-tw"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc-yt" href="#" target="_blank">
+								<a class="soc__item soc-yt" href="#" target="_blank" rel="nofollow">
 									<svg class="icon icon-soc-yt ">
 										<use xlink:href="img/svg/sprite.svg#soc-yt"></use>
 									</svg>
@@ -527,11 +527,14 @@
 								</ul>
 							</div>
 						</div>
-						<div class="f-address col-md-4 col-lg-3 col-xl-3 text-center text-md-start">
+						<div class="f-address col-md-4 col-lg-3 col-xl-3">
 							<div class="f-address__item">
 								<div class="f-address__i-title">Адрес:
 								</div>
-								<p>г. Нижний Новгород,<br/>ул. Юлиуса Фучика, д. 60 к15</p>
+								<p>
+									г. Нижний Новгород,
+									ул.&nbsp;Юлиуса Фучика, д.&nbsp;60&nbsp;к15
+								</p>
 							</div>
 							<div class="f-address__item">
 								<div class="f-address__i-title">Режим работы:
@@ -555,7 +558,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="f-tell col-md-4 col-lg-3 col-xl-2 col-xxl-auto ms-xxl-auto d-none d-md-block">
+						<div class="f-tell col-md-4 col-lg-3 col-xl-2 ms-xxl-auto d-none d-md-block">
 							<div class="f-tell__tell-bl">
 								<a class="f-tell__tel" href="tel:89308088580">8 (930) 808-85-80
 								</a>
@@ -568,20 +571,20 @@
 								<div class="f-tell__gray">городской
 								</div>
 							</div>
-							<div class="f-tell__tell-bl f-tell__tell-bl--wa">
-								<div class="f-tell__wa-row row align-items-end">
+							<a class="f-tell__tell-bl f-tell__tell-bl--wa d-inline-block" href="https://api.whatsapp.com/send/?phone=88312160797">
+								<div class="f-tell__wa-row row">
 									<div class="col-auto">
 										<div class="f-tell__wa-img"><img loading="lazy" src="img/svg/footer-wa.svg" alt=""/>
 										</div>
 									</div>
 									<div class="col">
-										<a class="f-tell__tel" href="https://api.whatsapp.com/send/?phone=88312160797">WhatsApp
-										</a>
+										<div class="f-tell__tel">WhatsApp
+										</div>
 										<div class="f-tell__gray">для звонков из зарубежа
 										</div>
 									</div>
 								</div>
-							</div>
+							</a>
 							<a class="big-link link-modal-js" href="#modal-call">Обратный звонок
 							</a>
 						</div>
