--- a/public/index.html
+++ b/public/index.html
@@ -255,54 +255,42 @@
 					<div class="headerBlock__slider-wrap">
 						<div class="swiper-container headerBlock-slider-js">
 							<div class="swiper-wrapper">
-								<div class="swiper-slide">
-									<div class="headerBlock__row row gx-0">
-										<div class="col-sm-7 col-lg-6">
-											<div class="headerBlock__content">
-												<div class="headerBlock__title">Переоборудование  автомобилей
-												</div>
-											</div>
-										</div>
-										<div class="headerBlock__img-col col-sm-5 col-lg-6 d-none d-sm-block"><img loading="lazy" src="img/@2x/headerBlock-img.jpg" alt=""/>
-										</div>
-									</div>
-								</div>
-								<div class="swiper-slide">
-									<div class="headerBlock__row row gx-0">
-										<div class="col-sm-7 col-lg-6">
-											<div class="headerBlock__content">
-												<div class="headerBlock__title">Переоборудование  автомобилей
-												</div>
-											</div>
-										</div>
-										<div class="headerBlock__img-col col-sm-5 col-lg-6 d-none d-sm-block"><img loading="lazy" src="img/@2x/headerBlock-img.jpg" alt=""/>
-										</div>
-									</div>
-								</div>
-								<div class="swiper-slide">
-									<div class="headerBlock__row row gx-0">
-										<div class="col-sm-7 col-lg-6">
-											<div class="headerBlock__content">
-												<div class="headerBlock__title">Переоборудование  автомобилей
-												</div>
-											</div>
-										</div>
-										<div class="headerBlock__img-col col-sm-5 col-lg-6 d-none d-sm-block"><img loading="lazy" src="img/@2x/headerBlock-img.jpg" alt=""/>
-										</div>
-									</div>
-								</div>
-								<div class="swiper-slide">
-									<div class="headerBlock__row row gx-0">
-										<div class="col-sm-7 col-lg-6">
-											<div class="headerBlock__content">
-												<div class="headerBlock__title">Переоборудование  автомобилей
-												</div>
-											</div>
-										</div>
-										<div class="headerBlock__img-col col-sm-5 col-lg-6 d-none d-sm-block"><img loading="lazy" src="img/@2x/headerBlock-img.jpg" alt=""/>
-										</div>
-									</div>
-								</div>
+								<div class="swiper-slide"><a href="#"> 
+										<!-- picture-->
+										<picture> 
+											<source type="image/webp" srcset="img/@2x/webp/headerBlock-img.webp" media="(min-width:576px)"/>
+											<source type="image/webp" srcset="img/@1x/webp/headerBlock-img.webp"/>
+											<source type="image/jpg" srcset="img/@2x/headerBlock-img.jpg" media="(min-width:576px)"/>
+											<source type="image/jpg" srcset="img/@1x/headerBlock-img.jpg"/><img src="img/@2x/headerBlock-img.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture--></a></div>
+								<div class="swiper-slide"><a href="#"> 
+										<!-- picture-->
+										<picture> 
+											<source type="image/webp" srcset="img/@2x/webp/headerBlock-img.webp" media="(min-width:576px)"/>
+											<source type="image/webp" srcset="img/@1x/webp/headerBlock-img.webp"/>
+											<source type="image/jpg" srcset="img/@2x/headerBlock-img.jpg" media="(min-width:576px)"/>
+											<source type="image/jpg" srcset="img/@1x/headerBlock-img.jpg"/><img src="img/@2x/headerBlock-img.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture--></a></div>
+								<div class="swiper-slide"><a href="#"> 
+										<!-- picture-->
+										<picture> 
+											<source type="image/webp" srcset="img/@2x/webp/headerBlock-img.webp" media="(min-width:576px)"/>
+											<source type="image/webp" srcset="img/@1x/webp/headerBlock-img.webp"/>
+											<source type="image/jpg" srcset="img/@2x/headerBlock-img.jpg" media="(min-width:576px)"/>
+											<source type="image/jpg" srcset="img/@1x/headerBlock-img.jpg"/><img src="img/@2x/headerBlock-img.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture--></a></div>
+								<div class="swiper-slide"><a href="#"> 
+										<!-- picture-->
+										<picture> 
+											<source type="image/webp" srcset="img/@2x/webp/headerBlock-img.webp" media="(min-width:576px)"/>
+											<source type="image/webp" srcset="img/@1x/webp/headerBlock-img.webp"/>
+											<source type="image/jpg" srcset="img/@2x/headerBlock-img.jpg" media="(min-width:576px)"/>
+											<source type="image/jpg" srcset="img/@1x/headerBlock-img.jpg"/><img src="img/@2x/headerBlock-img.jpg" alt="" loading="lazy"/>
+										</picture>
+										<!-- /picture--></a></div>
 							</div>
 							<div class="swiper-pagination"></div>
 						</div>
