--- a/public/07-services.html
+++ b/public/07-services.html
@@ -254,7 +254,7 @@
 					<div class="page-head__row row">
 						<div class="page-head__sb-col col-lg-3 d-none d-lg-block">
 							<ul class="page-head__dd-menu sb-dd-menu-js">
-								<li class="active"><a href="#">Справка о компании</a>
+								<li class="active menu-item-has-children"><a href="#">Справка о компании</a>
 									<ul class="active">
 										<li><a href="#">Удлинение газель</a></li>
 										<li><a href="#">Удлинение газон</a></li>
@@ -268,21 +268,21 @@
 										<li><a href="#">Удлинение next</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Бортовые платформы</a>
+								<li class="menu-item-has-children"><a href="#">Бортовые платформы</a>
 									<ul>
 										<li><a href="#">Удлинение газель</a></li>
 										<li><a href="#">Удлинение газон</a></li>
 										<li><a href="#">Удлинение next</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Спецтехника</a>
+								<li class="menu-item-has-children"><a href="#">Спецтехника</a>
 									<ul>
 										<li><a href="#">Удлинение газель</a></li>
 										<li><a href="#">Удлинение газон</a></li>
 										<li><a href="#">Удлинение next</a></li>
 									</ul>
 								</li>
-								<li class="active"><a href="#">Дополнительные опции</a>
+								<li class="active menu-item-has-children"><a href="#">Дополнительные опции</a>
 									<ul class="active">
 										<li><a href="#">Инструментальный ящик</a></li>
 										<li><a href="#">Пневмоподвеска</a></li>
