--- a/public/08-services-big.html
+++ b/public/08-services-big.html
@@ -647,12 +647,10 @@
 									<br/>с еврофургоном/платформой, регистрацией в ГИБДД и т.д.
 								</p>
 							</div>
-							<a class="sHowMuch__btn" href="#">Отправить заявку
+							<a class="sHowMuch__btn" href="#">Отправить заявку 
 							</a>
-							<div class="sHowMuch__img-mob d-md-none"><img loading="lazy" src="img/@2x/sHowMuch-car-mob.png" alt=""/>
-							</div>
 						</div>
-						<div class="col-md-6 col-xl-7 d-none d-md-block">
+						<div class="col-md-6 col-xl-7">
 							<div class="sHowMuch__img"><img loading="lazy" src="img/@2x/sHowMuch-car.png" alt=""/>
 							</div>
 						</div>
