--- a/public/index.html
+++ b/public/index.html
@@ -96,14 +96,14 @@
 									<use xlink:href="img/svg/sprite.svg#soc-inst"></use>
 								</svg>
 							</a>
-							<a class="soc__item soc-fb" href="#" target="_blank" rel="nofollow">
-								<svg class="icon icon-soc-fb ">
-									<use xlink:href="img/svg/sprite.svg#soc-fb"></use>
+							<a class="soc__item soc-rutube" href="#" target="_blank" rel="nofollow">
+								<svg class="icon icon-soc-rutube ">
+									<use xlink:href="img/svg/sprite.svg#soc-rutube"></use>
 								</svg>
 							</a>
-							<a class="soc__item soc-tw" href="#" target="_blank" rel="nofollow">
-								<svg class="icon icon-soc-tw ">
-									<use xlink:href="img/svg/sprite.svg#soc-tw"></use>
+							<a class="soc__item soc-ya-zen" href="#" target="_blank" rel="nofollow">
+								<svg class="icon icon-soc-ya-zen ">
+									<use xlink:href="img/svg/sprite.svg#soc-ya-zen"></use>
 								</svg>
 							</a>
 							<a class="soc__item soc-yt" href="#" target="_blank" rel="nofollow">
@@ -151,14 +151,14 @@
 											<use xlink:href="img/svg/sprite.svg#soc-inst"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc-fb" href="#" target="_blank" rel="nofollow">
-										<svg class="icon icon-soc-fb ">
-											<use xlink:href="img/svg/sprite.svg#soc-fb"></use>
+									<a class="soc__item soc-rutube" href="#" target="_blank" rel="nofollow">
+										<svg class="icon icon-soc-rutube ">
+											<use xlink:href="img/svg/sprite.svg#soc-rutube"></use>
 										</svg>
 									</a>
-									<a class="soc__item soc-tw" href="#" target="_blank" rel="nofollow">
-										<svg class="icon icon-soc-tw ">
-											<use xlink:href="img/svg/sprite.svg#soc-tw"></use>
+									<a class="soc__item soc-ya-zen" href="#" target="_blank" rel="nofollow">
+										<svg class="icon icon-soc-ya-zen ">
+											<use xlink:href="img/svg/sprite.svg#soc-ya-zen"></use>
 										</svg>
 									</a>
 									<a class="soc__item soc-yt" href="#" target="_blank" rel="nofollow">
@@ -179,7 +179,7 @@
 								<div class="top-nav__burger toggle-menu-mobile toggle-menu-mobile--js"><img loading="lazy" src="img/svg/burger-bars.svg" alt=""/>
 								</div>
 							</div>
-							<div class="col-auto">
+							<div class="col-auto d-none d-sm-block">
 								<div class="top-nav__logo"><img loading="lazy" src="img/svg/logo.svg" alt=""/>
 								</div>
 							</div>
@@ -192,7 +192,7 @@
 									<div class="top-nav__dd-btn tell-dd-btn-js">
 										<div class="top-nav__icon"><img loading="lazy" src="img/svg/tell.svg" alt=""/>
 										</div>
-										<a class="top-nav__number d-none d-lg-block" href="tel:+88002229792">8 800 222 97 92
+										<a class="top-nav__number d-block" href="tel:+88002229792">8 800 222 97 92
 										</a>
 									</div>
 									<div class="tell-dd tell-dd--js">
@@ -300,10 +300,10 @@
 						<p>Производство еврофургонов, эвакуаторов и самосвалов на базе машин отечественных и зарубежных марок, удлинение грузовых автомобилей, а также установка пневмоподвески, ГБО и п рочими видами усовершенствования коммерческого транспорта.</p>
 					</div>
 					<div class="headerBlock__c-row">
-						<a class="cat-card big" href="#"><img loading="lazy" src="img/@2x/headerBlock-card-1.jpg" alt=""/>
+						<a class="cat-card" href="#"><img loading="lazy" src="img/@2x/headerBlock-card-1.jpg" alt=""/>
 							<div class="cat-card__content">
-								<h6>Удлинение <br/> грузовых автомобилей</h6>
-								<p>Удлинение, производство еврофургонов, эвакуаторов и самосвалов <span class="d-none d-sm-inline">на базе машин отечественных и зарубежных марок. </span></p>
+								<h6>СПЕЦТЕХНИКА</h6>
+								<p>Удлинение, производство еврофургонов.</p>
 							</div>
 						</a>
 						<a class="cat-card" href="#"><img loading="lazy" src="img/@2x/headerBlock-card-2.jpg" alt=""/>
@@ -319,12 +319,6 @@
 							</div>
 						</a>
 						<a class="cat-card" href="#"><img loading="lazy" src="img/@2x/headerBlock-card-4.jpg" alt=""/>
-							<div class="cat-card__content">
-								<h6>СПЕЦТЕХНИКА</h6>
-								<p>Удлинение, производство еврофургонов.</p>
-							</div>
-						</a>
-						<a class="cat-card" href="#"><img loading="lazy" src="img/@2x/headerBlock-card-5.jpg" alt=""/>
 							<div class="cat-card__content">
 								<h6>СПЕЦТЕХНИКА</h6>
 								<p>Удлинение, производство еврофургонов.</p>
@@ -423,14 +417,14 @@
 										<use xlink:href="img/svg/sprite.svg#soc-inst"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc-fb" href="#" target="_blank" rel="nofollow">
-									<svg class="icon icon-soc-fb ">
-										<use xlink:href="img/svg/sprite.svg#soc-fb"></use>
+								<a class="soc__item soc-rutube" href="#" target="_blank" rel="nofollow">
+									<svg class="icon icon-soc-rutube ">
+										<use xlink:href="img/svg/sprite.svg#soc-rutube"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc-tw" href="#" target="_blank" rel="nofollow">
-									<svg class="icon icon-soc-tw ">
-										<use xlink:href="img/svg/sprite.svg#soc-tw"></use>
+								<a class="soc__item soc-ya-zen" href="#" target="_blank" rel="nofollow">
+									<svg class="icon icon-soc-ya-zen ">
+										<use xlink:href="img/svg/sprite.svg#soc-ya-zen"></use>
 									</svg>
 								</a>
 								<a class="soc__item soc-yt" href="#" target="_blank" rel="nofollow">
@@ -461,14 +455,14 @@
 										<use xlink:href="img/svg/sprite.svg#soc-inst"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc-fb" href="#" target="_blank" rel="nofollow">
-									<svg class="icon icon-soc-fb ">
-										<use xlink:href="img/svg/sprite.svg#soc-fb"></use>
+								<a class="soc__item soc-rutube" href="#" target="_blank" rel="nofollow">
+									<svg class="icon icon-soc-rutube ">
+										<use xlink:href="img/svg/sprite.svg#soc-rutube"></use>
 									</svg>
 								</a>
-								<a class="soc__item soc-tw" href="#" target="_blank" rel="nofollow">
-									<svg class="icon icon-soc-tw ">
-										<use xlink:href="img/svg/sprite.svg#soc-tw"></use>
+								<a class="soc__item soc-ya-zen" href="#" target="_blank" rel="nofollow">
+									<svg class="icon icon-soc-ya-zen ">
+										<use xlink:href="img/svg/sprite.svg#soc-ya-zen"></use>
 									</svg>
 								</a>
 								<a class="soc__item soc-yt" href="#" target="_blank" rel="nofollow">
